[package]
name = "tauri-plugin-user-data"
version = "2.0.0"
authors = ["Joaquin (Pato) Decima <jdecima@vasak.net.ar>", "Vasak Group"]
description = "User Data API for Tauri aplications (Created for VasakOS)"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-user-data"
repository = "https://github.com/Vasak-OS/tauri-plugin-user-data"
readme = "README.md"
license = "GPL-3.0-or-later"
license-file = "LICENSE"
keywords = ["tauri", "plugin", "user-data", "vasakos", "linux"]

[dependencies]
tauri = { version = "2" }
serde = "1.0"
thiserror = "2"
base64 = "0.21.1"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
